Edit page contents

--- a/templates/pools-equipment-2.html
+++ b/templates/pools-equipment-2.html
@@ -20,7 +20,8 @@
       context={
         'title': '<h1>Oprema za bazene</h1>',
         'subtitle': '<p class="font-light text-lg xl:text-3xl mb-2">A&T SISTEM nudi širok asortiman opreme za bazene renomeniranih proizvođača.</p>',
-				'button_text': 'POGLEDAJTE PONUDU'
+				'button_text': 'POGLEDAJTE PONUDU',
+        'link': { "url": { "type": "EXTERNAL", "href": "https://shop.atsistem.rs/sr/collections/all", "content_id": null }, "open_in_new_tab": false, "no_follow": false }
       }
     %}
 
@@ -57,9 +58,18 @@
       path='../sections/image-with-text.html',
       context={
         'title': 'Bazenska filtracija',
-        'description': 'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.',
+        'description': 'Možemo reći da je pumpno-filtersko postrojenje najvažniji deo bazenske opreme, koji omogućava cirkulaciju i mehaničko prečišćavanje bazenske vode. Naša ponuda obuhvata kvalitetne peščane filtere za rezidencijalne i javne bazene, cirkulacione pumpe, višenamenske ventile, automatske uređaje za filtraciju, specijlnu filtersku ispunu.',
         'h_tag_choice': 'h3',
-        'link_label': 'Pogledajte ponudu'
+        'link_label': 'Pogledajte ponudu',
+        'link': {
+          "url": {
+            "type": "EXTERNAL",
+            "href": "https://shop.atsistem.rs/sr/collections/bazenska-filtracija/",
+            "content_id": null
+          },
+          "open_in_new_tab": false,
+          "no_follow": false
+        }
       }
     %}
 
@@ -67,10 +77,20 @@
       path='../sections/image-with-text.html',
       context={
         'title': 'Podvodna rasveta',
-        'description': 'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.',
+        'description': 'Sigurni smo da se ne biste odrekli kupanja u svom bazenu u vrelim letnjim noćima! Podvodna rasveta ne samo da omogućava uživanje u bazenu kad nema dnevnog svetla, već ima dekorativnu, i naravno, bezbednosnu ulogu',
         'h_tag_choice': 'h3',
         'link_label': 'Pogledajte ponudu',
-        'reverse_content_direction': true
+        'reverse_content_direction': true,
+        'image_field': {
+          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Oprema/podvodna%20rasveta.jpg',
+          "alt": "Podvodna rasveta bazena",
+          "size_type": null,
+          "width": 725,
+          "height": 500,
+          "loading": "lazy",
+          "max_width": 725,
+          "max_height": 500
+        }
       }
     %}
 
@@ -78,7 +98,7 @@
       path='../sections/image-with-text.html',
       context={
         'title': 'Automatski hemijski tretman',
-        'description': 'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.',
+        'description': 'Za održavanje besprekornog kvaliteta bazenske vode nudimo najsavremeniju merno dozirnu tehniku velike preciznosti za doziranje hemijskih sredstava u minimalnoj količini. Tu su i uređaji za elektrolizu i hidrolizu vode, sa niskom koncentracijom soli i UV lampe za dodatnu dezinfekciju.',
         'h_tag_choice': 'h3',
         'link_label': 'Pogledajte ponudu'
       }
@@ -88,10 +108,19 @@
       path='../sections/image-with-text.html',
       context={
         'title': 'Grejanje i odvlaživanje',
-        'description': 'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.',
+        'description': 'Toplotne inverter pumpe su namenjene privatnim i komercijalnim bazenima za produženu sezonu kupanja. Nudimo širok dijapazon proizvoda, od BWT Mitsubishi Zubadan toplotnih pumpi, proizvedenih u Francuskoj, do odličnih Fairland uređaja, proizvedenih u Kini i sertifikovanih u EU.',
         'h_tag_choice': 'h3',
         'link_label': 'Pogledajte ponudu',
-        'reverse_content_direction': true
+        'reverse_content_direction': true,
+        'link': {
+          "url": {
+            "type": "EXTERNAL",
+            "href": "https://shop.atsistem.rs/sr/collections/grejanje-i-odvlazivanje/",
+            "content_id": null
+          },
+          "open_in_new_tab": false,
+          "no_follow": false
+        }
       }
     %}
 
@@ -99,9 +128,28 @@
       path='../sections/image-with-text.html',
       context={
         'title': 'Čišćenje i održavanje bazena',
-        'description': 'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.',
+        'description': 'Roboti postepeno preuzimaju dominantnu ulogu kada je reč o održavanju bazena jer su efiksni i lagani za korišćenje, a najnovija generacija bežičnih roborta na baterije dizajnirana je tako da pruži još veći komfor korisnicima.',
         'h_tag_choice': 'h3',
-        'link_label': 'Pogledajte ponudu'
+        'link_label': 'Pogledajte ponudu',
+        'image_field': {
+          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Oprema/ciscenje.jpg',
+          "alt": "Čišćenje i održavanje bazena",
+          "size_type": null,
+          "width": 725,
+          "height": 500,
+          "loading": "lazy",
+          "max_width": 725,
+          "max_height": 500
+        },
+        'link': {
+          "url": {
+            "type": "EXTERNAL",
+            "href": "https://shop.atsistem.rs/sr/collections/oprema-za-odrzavanje-bazena/",
+            "content_id": null
+          },
+          "open_in_new_tab": false,
+          "no_follow": false
+        }
       }
     %}
 
@@ -109,20 +157,20 @@
       path='../sections/image-w-text-gradient.html',
       context={
         'title': 'Pokrivač za bazen',
-        'description': 'Otkrijete našu fantastičnu ponudu koja obuhvata sve tipove bazenskih pokrivača, uključujući i bazenske kupole i pokretne konstrukcije po kojima može da se hoda.',
+        'description': 'Ako razmišljate o nabavci pokrivača za bazen, naš stručni tim vam može pružiti informacije o različitim tipovima proizvoda i njihovim mogućnostima, kako biste u skladu sa željom i raspoloživim budžetom odabrali najprikladniji model.',
         'h_tag_choice': 'h3',
-        'link_label': 'Opširnije',
+        'link_label': 'Pogledajte ponudu',
         'reverse_content_direction': true,
         'image_field': {
-            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/pool%20cover.jpeg',
-            "alt": "pexels-max-vakhtbovych-7587466 1",
-            "size_type": null,
-            "width": 725,
-            "height": 500,
-            "loading": "lazy",
-            "max_width": 725,
-            "max_height": 500
-          }
+          "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/pool%20cover.jpeg',
+          "alt": "pexels-max-vakhtbovych-7587466 1",
+          "size_type": null,
+          "width": 725,
+          "height": 500,
+          "loading": "lazy",
+          "max_width": 725,
+          "max_height": 500
+        }
       }
     %}
 
@@ -150,24 +198,24 @@
               "Tobogani"
             ],
             "link_group": {
-            "link_label": "Vidi Više",
+            "link_label": "Pogledajte ponudu",
             "link": {
               "url": {
               "content_id": null,
-              "href": "https://google.com",
+              "href": "https://shop.atsistem.rs/sr/collections/bazenske-atrakcije/",
               "type": "EXTERNAL"
               },
               "open_in_new_tab": false,
               "no_follow": false
             }
             },
-            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+            "description": "Dodajte bazenu ekstra kvalitet ugradnjom neke od bazenskih atrakcija.<br>Pružamo tehnička rešenja koja prate želje klijenata, bilo da se radi o hidromasaži leđa i nogu, vazdušnim ležaljkama, ramenoj masaži, turbo džetovima, vodenim slapovima, ili gejzirima."
           },
           {
             "collection": "Bazensko okruženje",
             "image_field": {
             "size_type": "auto",
-            "src": "https://atsistem.rs/hubfs/Bazensko%20Okruzenje.png",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Oprema/bazensko%20okruzenje.jpeg",
             "alt": "Bazensko okruženje",
             "loading": "lazy",
             },
@@ -181,24 +229,24 @@
               "Solarni Tuševi"
             ],
             "link_group": {
-            "link_label": "Vidi Više",
+            "link_label": "Pogledajte ponudu",
             "link": {
               "url": {
               "content_id": null,
-              "href": "https://google.com",
+              "href": "https://shop.atsistem.rs/sr/collections/bazensko-okruzenje/",
               "type": "EXTERNAL"
               },
               "open_in_new_tab": false,
               "no_follow": false
             }
             },
-            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+            "description": "U našoj ponudi je kompletan program solarnih i tradicionalnih tuševa, ležaljki, stolova i dodatne opreme, koji donosi jedinstven pečat luksuza i maksimalnog komfora, a prostor oko bazena, i u bazenu, pretvara u oazu za opuštanje, kojoj svi jedva čekaju da se vrate."
           },
           {
             "collection": "Hemija za bazene",
             "image_field": {
             "size_type": "auto",
-            "src": "https://atsistem.rs/hubfs/Hemija%20za%20Bazene.png",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Oprema/hemija%20za%20bazene.jpeg",
             "alt": "Hemija za bazene",
             "loading": "lazy",
             },
@@ -213,24 +261,24 @@
               "Flokulant"
             ],
             "link_group": {
-            "link_label": "Vidi Više",
+            "link_label": "Pogledajte ponudu",
             "link": {
               "url": {
               "content_id": null,
-              "href": "https://google.com",
+              "href": "https://shop.atsistem.rs/sr/collections/hemijski-tretman-bazenske-vode/",
               "type": "EXTERNAL"
               },
               "open_in_new_tab": false,
               "no_follow": false
             }
             },
-            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+            "description": "Održavanje kvaliteta vode u bazenu nije samo neophodno zbog zdravlja korisnika i estetike bazena, već utiče na izgled i trajanje svih komponenata bazenske opreme. Koristite samo sredstva renomiranih proizvođača i pridržavajte se njhovih preporuka za korišćenje."
           },
           {
             "collection": "Stakleni mozaik",
             "image_field": {
             "size_type": "auto",
-            "src": "https://atsistem.rs/hubfs/Br-2001.jpg",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Oprema/stakleni%20mozaik.jpg",
             "alt": "Stakleni mozaik",
             "loading": "lazy",
             },
@@ -239,18 +287,18 @@
               "List Item 1"
             ],
             "link_group": {
-            "link_label": "Vidi Više",
+            "link_label": "Pogledajte ponudu",
             "link": {
               "url": {
               "content_id": null,
-              "href": "https://google.com",
+              "href": "https://shop.atsistem.rs/sr/collections/stakleni-mozaik/",
               "type": "EXTERNAL"
               },
               "open_in_new_tab": false,
               "no_follow": false
             }
             },
-            "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+            "description": "Završni pečat vašem bazenu daće stakleni mozaik koji se pod vodom i na suncu, presijava u bezbroj neuhvatljivih nijansi. Mat, sjajan, sedefast, luminescentan, izbor je veliki, a kvalitet vrhunski. Jer to je MOSAVIT® stakleni mozaik, dizajniran da odgovori svim zahtevima."
           }
         ]
       }
@@ -260,19 +308,19 @@
       path='../sections/image-w-text-gradient.html',
       context={
         'title': 'BWT - Pool Products',
-        'description': 'Sa ponosom predstavljamo našeg dugogodišnjeg partnera, koji proizvodi bazensku opremu vrhunskog kvalitete u čak tri svoje fabrike u Bretanji, na severu Francuske.<br><small class="mt-0.5">©photo creadit : BWT POOL PRODUCTS</small>',
-        'link_label': 'Više o brendu',
+        'description': 'Ekspert u proizvodnji opreme za rezidencijalne i javne bazene, koji svoje dugogodišnje znanje, iskustvo i kvalitet stavlja našim klijentima na raspolaganje, kada se radi o specifičnim sistemskim rešenjima, uz maksimalnu hidrauličku optimizaciju.',
+        'link_label': 'Pogledajte ponudu',
         'reverse_content_direction': true,
         'image_field': {
-            "src": 'https://atsistem.rs/hubfs/Usluge%20Sadrzaj/BWT%20Pool%20Products.jpg',
-            "alt": "pexels-max-vakhtbovych-7587466 1",
-            "size_type": null,
-            "width": 725,
-            "height": 500,
-            "loading": "lazy",
-            "max_width": 725,
-            "max_height": 500
-          }
+          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Oprema/BWT_LOGO.png',
+          "alt": "BWT Logo",
+          "size_type": null,
+          "width": 725,
+          "height": 500,
+          "loading": "lazy",
+          "max_width": 725,
+          "max_height": 500
+        }
       }
     %}
 
@@ -280,9 +328,9 @@
       path='../sections/image-with-text.html',
       context={
         'title': 'IBG® - Praher® cevi i ventili',
-        'description': 'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.',
+        'description': 'Veleprodaja PVC-U cevi, ventila i fitinga, sa radnim pritiskom 10 - 16 bara, proizvedenih u skladu sa standardima kvaliteta za pijaću vodu, prehrambenu industriju i industriju pića.',
         'h_tag_choice': 'h3',
-        'link_label': 'Opširnije'
+        'link_label': 'Pogledajte ponudu'
       }
     %}
 
