Edit listings of equipments categories in Equipment 2 Page Template

--- a/templates/pools-equipment-2.html
+++ b/templates/pools-equipment-2.html
@@ -55,72 +55,79 @@
     {% end_dnd_section %}
 
     {% include_dnd_partial
-      path='../sections/image-with-text.html',
+      path='../sections/products-grid.html',
       context={
-        'title': 'Bazenska filtracija',
-        'description': 'Možemo reći da je pumpno-filtersko postrojenje najvažniji deo bazenske opreme, koji omogućava cirkulaciju i mehaničko prečišćavanje bazenske vode. Naša ponuda obuhvata kvalitetne peščane filtere za rezidencijalne i javne bazene, cirkulacione pumpe, višenamenske ventile, automatske uređaje za filtraciju, specijlnu filtersku ispunu.',
-        'h_tag_choice': 'h3',
-        'link_label': 'Pogledajte ponudu',
-        'link': {
-          "url": {
-            "type": "EXTERNAL",
-            "href": "https://shop.atsistem.rs/sr/collections/bazenska-filtracija/",
-            "content_id": null
+        'show_image': false,
+        'cards':[
+          {
+            "collection": "Bazenska<br>filtracija",
+            "description_type": "paragraph",
+            "link_group": {
+              "link_label": "Pogledajte ponudu",
+              "link": {
+                "url": {
+                "content_id": null,
+                "href": "https://shop.atsistem.rs/sr/collections/bazenska-filtracija/",
+                "type": "EXTERNAL"
+                },
+                "open_in_new_tab": false,
+                "no_follow": false
+              }
+            },
+            "description": "Možemo reći da je pumpno-filtersko postrojenje najvažniji deo bazenske opreme, koji omogućava cirkulaciju i mehaničko prečišćavanje bazenske vode. Naša ponuda obuhvata kvalitetne peščane filtere za rezidencijalne i javne bazene, cirkulacione pumpe, višenamenske ventile, automatske uređaje za filtraciju, specijlnu filtersku ispunu."
           },
-          "open_in_new_tab": false,
-          "no_follow": false
-        }
-      }
-    %}
-
-    {% include_dnd_partial
-      path='../sections/image-with-text.html',
-      context={
-        'title': 'Podvodna rasveta',
-        'description': 'Sigurni smo da se ne biste odrekli kupanja u svom bazenu u vrelim letnjim noćima! Podvodna rasveta ne samo da omogućava uživanje u bazenu kad nema dnevnog svetla, već ima dekorativnu, i naravno, bezbednosnu ulogu',
-        'h_tag_choice': 'h3',
-        'link_label': 'Pogledajte ponudu',
-        'reverse_content_direction': true,
-        'image_field': {
-          "src": 'https://atsistem.rs/hubfs/Sadrzaj%20Oprema/podvodna%20rasveta.jpg',
-          "alt": "Podvodna rasveta bazena",
-          "size_type": null,
-          "width": 725,
-          "height": 500,
-          "loading": "lazy",
-          "max_width": 725,
-          "max_height": 500
-        }
-      }
-    %}
-
-    {% include_dnd_partial
-      path='../sections/image-with-text.html',
-      context={
-        'title': 'Automatski hemijski tretman',
-        'description': 'Za održavanje besprekornog kvaliteta bazenske vode nudimo najsavremeniju merno dozirnu tehniku velike preciznosti za doziranje hemijskih sredstava u minimalnoj količini. Tu su i uređaji za elektrolizu i hidrolizu vode, sa niskom koncentracijom soli i UV lampe za dodatnu dezinfekciju.',
-        'h_tag_choice': 'h3',
-        'link_label': 'Pogledajte ponudu'
-      }
-    %}
-
-    {% include_dnd_partial
-      path='../sections/image-with-text.html',
-      context={
-        'title': 'Grejanje i odvlaživanje',
-        'description': 'Toplotne inverter pumpe su namenjene privatnim i komercijalnim bazenima za produženu sezonu kupanja. Nudimo širok dijapazon proizvoda, od BWT Mitsubishi Zubadan toplotnih pumpi, proizvedenih u Francuskoj, do odličnih Fairland uređaja, proizvedenih u Kini i sertifikovanih u EU.',
-        'h_tag_choice': 'h3',
-        'link_label': 'Pogledajte ponudu',
-        'reverse_content_direction': true,
-        'link': {
-          "url": {
-            "type": "EXTERNAL",
-            "href": "https://shop.atsistem.rs/sr/collections/grejanje-i-odvlazivanje/",
-            "content_id": null
+          {
+            "collection": "Podvodna<br>rasveta",
+            "description_type": "paragraph",
+            "link_group": {
+              "link_label": "Pogledajte ponudu",
+              "link": {
+                "url": {
+                "content_id": null,
+                "href": "https://shop.atsistem.rs/sr/collections/bazenska-filtracija/",
+                "type": "EXTERNAL"
+                },
+                "open_in_new_tab": false,
+                "no_follow": false
+              }
+            },
+            "description": "Sigurni smo da se ne biste odrekli kupanja u svom bazenu u vrelim letnjim noćima! Podvodna rasveta ne samo da omogućava uživanje u bazenu kad nema dnevnog svetla, već ima dekorativnu, i naravno, bezbednosnu ulogu."
           },
-          "open_in_new_tab": false,
-          "no_follow": false
-        }
+          {
+            "collection": "Automatski<br>hemijski tretman",
+            "description_type": "paragraph",
+            "link_group": {
+              "link_label": "Pogledajte ponudu",
+              "link": {
+                "url": {
+                "content_id": null,
+                "href": "https://shop.atsistem.rs/sr/collections/bazenska-filtracija/",
+                "type": "EXTERNAL"
+                },
+                "open_in_new_tab": false,
+                "no_follow": false
+              }
+            },
+            "description": "Za održavanje besprekornog kvaliteta bazenske vode nudimo najsavremeniju merno dozirnu tehniku velike preciznosti za doziranje hemijskih sredstava u minimalnoj količini. Tu su i uređaji za elektrolizu i hidrolizu vode, sa niskom koncentracijom soli i UV lampe za dodatnu dezinfekciju."
+          },
+          {
+            "collection": "Grejanje<br>i odvlaživanje",
+            "description_type": "paragraph",
+            "link_group": {
+              "link_label": "Pogledajte ponudu",
+              "link": {
+                "url": {
+                "content_id": null,
+                "href": "https://shop.atsistem.rs/sr/collections/grejanje-i-odvlazivanje/",
+                "type": "EXTERNAL"
+                },
+                "open_in_new_tab": false,
+                "no_follow": false
+              }
+            },
+            "description": "Toplotne inverter pumpe su namenjene privatnim i komercijalnim bazenima za produženu sezonu kupanja. Nudimo širok dijapazon proizvoda, od BWT Mitsubishi Zubadan toplotnih pumpi, proizvedenih u Francuskoj, do odličnih Fairland uređaja, proizvedenih u Kini i sertifikovanih u EU."
+          }
+        ]
       }
     %}
 
@@ -152,6 +159,7 @@
         }
       }
     %}
+
 
     {% include_dnd_partial
       path='../sections/image-w-text-gradient.html',
