--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -1076,6 +1076,10 @@ button:hover,
   margin-top: auto;
 }
 
+.mb-0 {
+  margin-bottom: 0px;
+}
+
 .block {
   display: block;
 }
@@ -1195,6 +1199,10 @@ button:hover,
 
 .max-h-full {
   max-height: 100%;
+}
+
+.max-h-\[220px\] {
+  max-height: 220px;
 }
 
 .min-h-\[250px\] {
@@ -1810,6 +1818,16 @@ button:hover,
   padding-bottom: 8px;
 }
 
+.px-10 {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.px-8 {
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
 .pb-10 {
   padding-bottom: 100px;
 }
@@ -1990,6 +2008,10 @@ button:hover,
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.leading-5 {
+  line-height: 1.333;
 }
 
 .tracking-\[2\.8px\] {
@@ -2221,6 +2243,10 @@ button:hover,
     margin-bottom: 0px;
   }
 
+  .md\:max-h-\[420px\] {
+    max-height: 420px;
+  }
+
   .md\:columns-2 {
     -moz-columns: 2;
          columns: 2;
@@ -2250,6 +2276,11 @@ button:hover,
   .md\:py-8 {
     padding-top: 80px;
     padding-bottom: 80px;
+  }
+
+  .md\:px-8 {
+    padding-left: 80px;
+    padding-right: 80px;
   }
 
   .md\:pb-\[370px\] {
@@ -2347,6 +2378,10 @@ button:hover,
 
   .lg\:h-\[6px\] {
     height: 6px;
+  }
+
+  .lg\:max-h-\[300px\] {
+    max-height: 300px;
   }
 
   .lg\:w-1\/2 {
