--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -654,6 +654,20 @@ p {
   }
 }
 
+.subheading {
+  margin-bottom: 20px;
+  font-size: 20px;
+  line-height: 1.4;
+  font-weight: 300;
+}
+
+@media (min-width: 1280px) {
+  .subheading {
+    font-size: 32px;
+    line-height: 2.25rem;
+  }
+}
+
 button,
   .button {
   --tw-bg-opacity: 1;
@@ -971,9 +985,8 @@ button:hover,
   margin-bottom: 20px;
 }
 
-.my-3 {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .mb-0\.5 {
@@ -1074,10 +1087,6 @@ button:hover,
 
 .mt-auto {
   margin-top: auto;
-}
-
-.mb-0 {
-  margin-bottom: 0px;
 }
 
 .block {
@@ -1181,6 +1190,10 @@ button:hover,
   max-height: 200px;
 }
 
+.max-h-\[220px\] {
+  max-height: 220px;
+}
+
 .max-h-\[250px\] {
   max-height: 250px;
 }
@@ -1189,20 +1202,12 @@ button:hover,
   max-height: 300px;
 }
 
-.max-h-\[420px\] {
-  max-height: 420px;
-}
-
 .max-h-\[70\%\] {
   max-height: 70%;
 }
 
 .max-h-full {
   max-height: 100%;
-}
-
-.max-h-\[220px\] {
-  max-height: 220px;
 }
 
 .min-h-\[250px\] {
@@ -1818,16 +1823,6 @@ button:hover,
   padding-bottom: 8px;
 }
 
-.px-10 {
-  padding-left: 100px;
-  padding-right: 100px;
-}
-
-.px-8 {
-  padding-left: 80px;
-  padding-right: 80px;
-}
-
 .pb-10 {
   padding-bottom: 100px;
 }
@@ -1998,6 +1993,10 @@ button:hover,
   line-height: 1.375 !important;
 }
 
+.leading-5 {
+  line-height: 1.333;
+}
+
 .leading-none {
   line-height: 1;
 }
@@ -2008,10 +2007,6 @@ button:hover,
 
 .leading-tight {
   line-height: 1.25;
-}
-
-.leading-5 {
-  line-height: 1.333;
 }
 
 .tracking-\[2\.8px\] {
@@ -2227,11 +2222,6 @@ button:hover,
     padding: 40px;
   }
 
-  .sm\:text-5xl {
-    font-size: 48px;
-    line-height: 1;
-  }
-
   .sm\:text-sm {
     font-size: 16px;
     line-height: 1.25rem;
@@ -2271,11 +2261,6 @@ button:hover,
   .md\:px-6 {
     padding-left: 60px;
     padding-right: 60px;
-  }
-
-  .md\:py-8 {
-    padding-top: 80px;
-    padding-bottom: 80px;
   }
 
   .md\:px-8 {
@@ -2467,11 +2452,6 @@ button:hover,
     padding-right: 10px;
   }
 
-  .lg\:px-10 {
-    padding-left: 100px;
-    padding-right: 100px;
-  }
-
   .lg\:py-2 {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -2577,11 +2557,6 @@ button:hover,
 
   .xl\:gap-\[160px\] {
     gap: 160px;
-  }
-
-  .xl\:px-\[130px\] {
-    padding-left: 130px;
-    padding-right: 130px;
   }
 
   .xl\:text-3xl {
