--- a/templates/pools-equipment-2.html
+++ b/templates/pools-equipment-2.html
@@ -39,7 +39,7 @@
             path='@hubspot/rich_text',
 				    html='
               <h2>Kompletna bazenska oprema na jednom mestu</h2>
-              <p>Najveću razliku za izbor bazenske opreme čini da li je bazen za privatnu ili javnu upotrebu. A što se tiče kvaliteta proizvoda, tu ne pravimo kompromis – naša ponuda sastoji se isključivo od odabranih proizvoda proverenog kvaliteta.
+              <p class="text-sm">Najveću razliku za izbor bazenske opreme čini da li je bazen za privatnu ili javnu upotrebu. A što se tiče kvaliteta proizvoda, tu ne pravimo kompromis – naša ponuda sastoji se isključivo od odabranih proizvoda proverenog kvaliteta.
               <br>
               <br>
               A&T ponuda osnovne opreme za bazen obuhvata sve ugradne elemente i tehničku opremu bez kojih bazen ne bi mogao da funkcioniše, a to su: hidraulična mreža, ugradni elementi za cirkulaciju, pumpno filterski blok, elektroupravljačke komponente, osnovna oprema za održavanje.
