--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -565,73 +565,91 @@ h1,
   font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-h1 {
+h1,
+  .h1 {
   font-size: 52px;
   line-height: 1;
   font-weight: 500;
 }
 
-h2 {
+h2,
+  .h2 {
   font-size: 32px;
   line-height: 2.25rem;
   font-weight: 700;
 }
 
 @media (min-width: 1024px) {
-  h2 {
-    font-size: 48px;
+  h2,
+  .h2 {
+    font-size: 42px;
     line-height: 1.25;
     font-weight: 700;
   }
 }
 
-h3 {
+h3,
+  .h3 {
   font-size: 24px;
-  line-height: 1.333;
   font-weight: 700;
+  line-height: 1.142;
+}
+
+@media (min-width: 640px) {
+  h3,
+  .h3 {
+    line-height: 1.25;
+  }
 }
 
 @media (min-width: 1024px) {
-  h3 {
+  h3,
+  .h3 {
     font-size: 40px;
     line-height: 1.25;
     font-weight: 700;
   }
 }
 
-h4 {
+h4,
+  h4 {
   font-size: 24px;
   line-height: 1.333;
 }
 
 @media (min-width: 1024px) {
+  h4,
   h4 {
-    font-size: 32px;
+    font-size: 36px;
     line-height: 1.25;
-    font-weight: 300;
+    font-weight: 400;
   }
 }
 
-h5 {
+h5,
+  .h5 {
   font-size: 20px;
   line-height: 1.4;
 }
 
 @media (min-width: 1024px) {
-  h5 {
+  h5,
+  .h5 {
     font-size: 24px;
     line-height: 1.333;
     font-weight: 500;
   }
 }
 
-h6 {
+h6,
+  .h6 {
   font-size: 18px;
-  line-height: 1.555;
+  line-height: 1.333;
 }
 
 @media (min-width: 1024px) {
-  h6 {
+  h6,
+  .h6 {
     font-size: 20px;
     line-height: 1.4;
     font-weight: 500;
@@ -646,30 +664,11 @@ p {
   line-height: 1.375;
 }
 
-@media (min-width: 1024px) {
-  p {
-    font-size: 18px;
-    line-height: 1.375;
-    font-weight: 300;
-  }
-}
-
-.subheading {
-  margin-bottom: 20px;
-  font-size: 20px;
-  line-height: 1.4;
-  font-weight: 300;
-}
-
-@media (min-width: 1280px) {
-  .subheading {
-    font-size: 32px;
-    line-height: 2.25rem;
-  }
-}
-
 button,
-  .button {
+  .button,
+  .hs-button {
+  width: -moz-fit-content;
+  width: fit-content;
   --tw-bg-opacity: 1;
   background-color: rgb(215 180 243 / var(--tw-bg-opacity, 1));
   padding-left: 25px;
@@ -677,8 +676,8 @@ button,
   padding-top: 10px;
   padding-bottom: 10px;
   font-family: Poppins, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 16px;
-  line-height: 1.25rem;
+  font-size: 14px;
+  line-height: 1rem;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.025em;
@@ -863,20 +862,12 @@ button:hover,
   bottom: 0px;
 }
 
-.bottom-2 {
-  bottom: 20px;
-}
-
 .bottom-\[-85px\] {
   bottom: -85px;
 }
 
 .left-0 {
   left: 0px;
-}
-
-.left-2 {
-  left: 20px;
 }
 
 .left-\[-65px\] {
@@ -1117,6 +1108,11 @@ button:hover,
   display: none;
 }
 
+.size-full {
+  width: 100%;
+  height: 100%;
+}
+
 .\!h-\[400px\] {
   height: 400px !important;
 }
@@ -1153,10 +1149,6 @@ button:hover,
   height: 300px;
 }
 
-.h-\[5px\] {
-  height: 5px;
-}
-
 .h-\[6px\] {
   height: 6px;
 }
@@ -1190,10 +1182,6 @@ button:hover,
   max-height: 200px;
 }
 
-.max-h-\[220px\] {
-  max-height: 220px;
-}
-
 .max-h-\[250px\] {
   max-height: 250px;
 }
@@ -1206,16 +1194,16 @@ button:hover,
   max-height: 70%;
 }
 
-.max-h-full {
-  max-height: 100%;
-}
-
 .min-h-\[250px\] {
   min-height: 250px;
 }
 
 .min-h-\[450px\] {
   min-height: 450px;
+}
+
+.min-h-\[800px\] {
+  min-height: 800px;
 }
 
 .min-h-full {
@@ -1317,10 +1305,6 @@ button:hover,
 
 .max-w-\[750px\] {
   max-width: 750px;
-}
-
-.max-w-full {
-  max-width: 100%;
 }
 
 .max-w-xl {
@@ -1627,17 +1611,13 @@ button:hover,
   background-color: rgb(215 180 243 / .85);
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-t {
@@ -1668,32 +1648,12 @@ button:hover,
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-blue {
-  --tw-gradient-from: #B8D0FC var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(184 208 252 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-transparent {
-  --tw-gradient-from: transparent var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .to-\[\#6630ceb8\] {
   --tw-gradient-to: #6630ceb8 var(--tw-gradient-to-position);
 }
 
 .to-\[\#6E43FF00\] {
   --tw-gradient-to: #6E43FF00 var(--tw-gradient-to-position);
-}
-
-.to-black\/\[\.38\] {
-  --tw-gradient-to: rgb(0 0 0 / .38) var(--tw-gradient-to-position);
-}
-
-.to-pink {
-  --tw-gradient-to: #D7B4F3 var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -1738,6 +1698,10 @@ button:hover,
   padding: 30px;
 }
 
+.p-4 {
+  padding: 40px;
+}
+
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -1773,11 +1737,6 @@ button:hover,
   padding-bottom: 0px;
 }
 
-.py-1 {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
 .py-10 {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -1786,6 +1745,11 @@ button:hover,
 .py-2 {
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.py-3 {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .py-4 {
@@ -1887,8 +1851,16 @@ button:hover,
   padding-top: 140px;
 }
 
+.pt-\[230px\] {
+  padding-top: 230px;
+}
+
 .pt-\[56\.25\%\] {
   padding-top: 56.25%;
+}
+
+.\!pb-6 {
+  padding-bottom: 60px !important;
 }
 
 .text-left {
@@ -1932,9 +1904,13 @@ button:hover,
   line-height: 1;
 }
 
+.text-\[76px\] {
+  font-size: 76px;
+}
+
 .text-base {
   font-size: 18px;
-  line-height: 1.555;
+  line-height: 1.333;
 }
 
 .text-lg {
@@ -2094,6 +2070,58 @@ button:hover,
   transition-duration: 500ms;
 }
 
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:left-0::before {
+  content: var(--tw-content);
+  left: 0px;
+}
+
+.before\:top-0::before {
+  content: var(--tw-content);
+  top: 0px;
+}
+
+.before\:size-full::before {
+  content: var(--tw-content);
+  width: 100%;
+  height: 100%;
+}
+
+.before\:bg-blackGradientHorizontal::before {
+  content: var(--tw-content);
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0) 65%);
+}
+
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:left-0::after {
+  content: var(--tw-content);
+  left: 0px;
+}
+
+.after\:top-0::after {
+  content: var(--tw-content);
+  top: 0px;
+}
+
+.after\:size-full::after {
+  content: var(--tw-content);
+  width: 100%;
+  height: 100%;
+}
+
+.after\:bg-blackGradientVertical::after {
+  content: var(--tw-content);
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.45) 4%, rgba(0, 0, 0, 0) 63%);
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -2174,14 +2202,6 @@ button:hover,
 }
 
 @media (min-width: 640px) {
-  .sm\:bottom-4 {
-    bottom: 40px;
-  }
-
-  .sm\:left-4 {
-    left: 40px;
-  }
-
   .sm\:left-\[30px\] {
     left: 30px;
   }
@@ -2218,13 +2238,8 @@ button:hover,
     align-items: center;
   }
 
-  .sm\:p-4 {
-    padding: 40px;
-  }
-
-  .sm\:text-sm {
-    font-size: 16px;
-    line-height: 1.25rem;
+  .sm\:p-3 {
+    padding: 30px;
   }
 }
 
@@ -2244,6 +2259,10 @@ button:hover,
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:items-center {
@@ -2305,14 +2324,6 @@ button:hover,
     right: -65px;
   }
 
-  .lg\:bottom-3 {
-    bottom: 30px;
-  }
-
-  .lg\:left-3 {
-    left: 30px;
-  }
-
   .lg\:left-\[-55px\] {
     left: -55px;
   }
@@ -2361,12 +2372,24 @@ button:hover,
     display: none;
   }
 
+  .lg\:h-\[450px\] {
+    height: 450px;
+  }
+
   .lg\:h-\[6px\] {
     height: 6px;
   }
 
-  .lg\:max-h-\[300px\] {
-    max-height: 300px;
+  .lg\:h-\[400px\] {
+    height: 400px;
+  }
+
+  .lg\:h-\[300px\] {
+    height: 300px;
+  }
+
+  .lg\:h-\[350px\] {
+    height: 350px;
   }
 
   .lg\:w-1\/2 {
@@ -2390,6 +2413,10 @@ button:hover,
     width: max-content;
   }
 
+  .lg\:max-w-\[600px\] {
+    max-width: 600px;
+  }
+
   .lg\:max-w-lg {
     max-width: 32rem;
   }
@@ -2401,10 +2428,6 @@ button:hover,
 
   .lg\:grid-flow-col {
     grid-auto-flow: column;
-  }
-
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-3 {
@@ -2441,10 +2464,6 @@ button:hover,
 
   .lg\:stroke-grey {
     stroke: #373738;
-  }
-
-  .lg\:p-3 {
-    padding: 30px;
   }
 
   .lg\:px-1 {
@@ -2485,7 +2504,7 @@ button:hover,
 
   .lg\:text-base {
     font-size: 18px;
-    line-height: 1.555;
+    line-height: 1.333;
   }
 
   .lg\:text-lg {
